--- a/TaskSystem.uplugin
+++ b/TaskSystem.uplugin
@@ -19,6 +19,11 @@
 			"Name": "TaskSystem",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "TaskSystemEditor",
+			"Type": "Editor",
+			"LoadingPhase": "PreDefault"
 		}
 	]
 }
